[package]
name = "rp-i18n-derive"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Proc-macro deriving LocalizedParser for clap-derive structs (companion to rp-i18n)"
rust-version.workspace = true

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
