load("@cr//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

exports_files(
    ["Cargo.toml"],
    visibility = ["//visibility:public"],
)

_INTRA_WORKSPACE_DEPS = [
    "//crates/rp-auth:rp-auth",
    "//crates/rusty-photon-tls:rusty-photon-tls",
]

rust_library(
    name = "rp-mcp-client",
    srcs = glob(["src/**/*.rs"]),
    aliases = aliases(),
    crate_name = "rp_mcp_client",
    edition = "2021",
    proc_macro_deps = all_crate_deps(proc_macro = True),
    visibility = ["//visibility:public"],
    deps = _INTRA_WORKSPACE_DEPS + all_crate_deps(normal = True),
)

rust_test(
    name = "rp-mcp-client_unit_test",
    size = "small",
    aliases = aliases(
        normal_dev = True,
        proc_macro_dev = True,
    ),
    crate = ":rp-mcp-client",
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
        proc_macro_dev = True,
    ),
    deps = _INTRA_WORKSPACE_DEPS + all_crate_deps(
        normal = True,
        normal_dev = True,
    ),
)
