[package]
name = "rp-mcp-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "The standard authenticated MCP client for rp's /mcp endpoint (ADR-017)"

[lints]
workspace = true

[dependencies]
base64 = { workspace = true }
reqwest = { workspace = true }
rmcp = { workspace = true, features = ["client", "transport-streamable-http-client-reqwest"] }
rp-auth = { workspace = true }
rusty-photon-tls = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
