load("@cr//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

exports_files(
    ["Cargo.toml"],
    visibility = ["//visibility:public"],
)

# Production-clean library: no `mock` feature, no mockall in the
# linked binary. Use this from rust_library / rust_binary targets.
# Cargo gets the same shape via `[dev-dependencies] rp-plate-solver
# = { features = ["mock"] }`; Bazel needs an explicit second target
# because crate_features is a compile-time attribute of the library
# output (see docs/plans/archive/bazel-migration.md "Mockall mock variants").
rust_library(
    name = "rp-plate-solver",
    srcs = glob(["src/**/*.rs"]),
    aliases = aliases(),
    crate_name = "rp_plate_solver",
    edition = "2021",
    proc_macro_deps = all_crate_deps(proc_macro = True),
    visibility = ["//visibility:public"],
    deps = all_crate_deps(normal = True),
)

# Test-only variant exposing `MockPlateSolveClient` to downstream
# rust_test targets. `testonly = True` blocks production
# rust_library / rust_binary targets from depending on it at
# Bazel-build time, so the convention isn't only enforced by code
# review.
rust_library(
    name = "rp-plate-solver_with_mock",
    testonly = True,
    srcs = glob(["src/**/*.rs"]),
    aliases = aliases(),
    crate_features = ["mock"],
    crate_name = "rp_plate_solver",
    edition = "2021",
    proc_macro_deps = all_crate_deps(proc_macro = True),
    visibility = ["//visibility:public"],
    deps = all_crate_deps(normal = True),
)

rust_test(
    name = "rp-plate-solver_unit_test",
    size = "small",
    aliases = aliases(
        normal_dev = True,
        proc_macro_dev = True,
    ),
    crate = ":rp-plate-solver_with_mock",
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
        proc_macro_dev = True,
    ),
    deps = all_crate_deps(
        normal = True,
        normal_dev = True,
    ),
)
