load("@cr//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

exports_files(
    ["Cargo.toml"],
    visibility = ["//visibility:public"],
)

# rp-vocabulary is a first-party leaf (not an `@cr` entry), so it is named
# as an explicit Bazel label rather than resolved by `all_crate_deps`. The
# store's Binning/IcrsCoord value types are re-exported from it (ADR-019);
# the `schema` feature stays off so the store leaf remains schemars-free.
_INTRA_WORKSPACE_DEPS = [
    "//crates/rp-vocabulary:rp-vocabulary",
]

# Production-clean library: no `mock` feature, no mockall in the linked
# binary. crate_universe only resolves the optional `mockall` dependency
# into the "normal" bucket once a real consumer activates rp-targets'
# `mock` feature (e.g. services/rp's `[dev-dependencies] rp-targets =
# { features = ["mock"] }`, added when rp integration starts consuming
# `MockTargetStore`) — see rp-guider's BUILD.bazel for the resulting
# `_with_mock` testonly variant pattern this crate adopts once that lands.
# Until then, `rust_test` below recompiles this target's sources directly
# (`cfg(test)` alone satisfies `cfg(any(test, feature = "mock"))`), so the
# crate's own unit tests already exercise `MockTargetStore`/automock via
# the plain normal_dev dependency on `mockall`.
rust_library(
    name = "rp-targets",
    srcs = glob(["src/**/*.rs"]),
    aliases = aliases(),
    crate_name = "rp_targets",
    edition = "2021",
    proc_macro_deps = all_crate_deps(proc_macro = True),
    visibility = ["//visibility:public"],
    deps = _INTRA_WORKSPACE_DEPS + all_crate_deps(normal = True),
)

rust_test(
    name = "rp-targets_unit_test",
    size = "small",
    aliases = aliases(
        normal_dev = True,
        proc_macro_dev = True,
    ),
    crate = ":rp-targets",
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
        proc_macro_dev = True,
    ),
    deps = _INTRA_WORKSPACE_DEPS + all_crate_deps(
        normal = True,
        normal_dev = True,
    ),
)
