load("@crates//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

exports_files(["Cargo.toml"], visibility = ["//visibility:public"])

rust_library(
    name = "rp-tls",
    srcs = glob(["src/**/*.rs"]),
    aliases = aliases(),
    crate_name = "rp_tls",
    edition = "2021",
    proc_macro_deps = all_crate_deps(proc_macro = True),
    visibility = ["//visibility:public"],
    deps = all_crate_deps(normal = True),
)

rust_test(
    name = "rp-tls_unit_test",
    aliases = aliases(
        normal_dev = True,
        proc_macro_dev = True,
    ),
    crate = ":rp-tls",
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
        proc_macro_dev = True,
    ),
    deps = all_crate_deps(
        normal = True,
        normal_dev = True,
    ),
)

rust_test(
    name = "tls_roundtrip",
    srcs = ["tests/tls_roundtrip.rs"],
    aliases = aliases(
        normal_dev = True,
        proc_macro_dev = True,
    ),
    edition = "2021",
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
        proc_macro_dev = True,
    ),
    deps = [":rp-tls"] + all_crate_deps(
        normal = True,
        normal_dev = True,
    ),
)
