[package]
name = "rp-tls"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "TLS utilities for Rusty Photon services"
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
rcgen = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
tokio-rustls = { workspace = true }
socket2 = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
axum = { workspace = true }
async-trait = { workspace = true }
cloudflare = { workspace = true }
hostname = "0.4"
instant-acme = { workspace = true }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "service"] }
time = "0.3"

[dev-dependencies]
mockall = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
reqwest = { workspace = true }
